ability to translate some settings and...
 use the secondary color for more elements

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -377,6 +377,8 @@
   "@musicPlayback": {},
   "myMusic": "My Music",
   "@myMusic": {},
+  "next": "Next",
+  "@next": {},
   "no": "No",
   "@no": {},
   "noFolderSelected": "No Folder selected",
@@ -427,6 +429,8 @@
   "@port": {},
   "prefReq": "Mind telling us a few things?",
   "@prefReq": {},
+  "previous": "Previous",
+  "@previous": {},
   "proxySet": "Proxy Settings",
   "@proxySet": {},
   "proxySetSub": "Change Proxy IP and Port",
